// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GooglePay desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcGooglePay YpcGooglePay_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon YpcGooglePay-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;

exports[`GooglePay desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcGooglePay YpcGooglePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon YpcGooglePay-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;

exports[`GooglePay desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcGooglePay YpcGooglePay_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon YpcGooglePay-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;

exports[`GooglePay touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcGooglePay YpcGooglePay_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;

exports[`GooglePay touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcGooglePay YpcGooglePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;

exports[`GooglePay touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcGooglePay YpcGooglePay_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_google-pay YpcIcon_width_xl YpcIcon_height_s YpcIcon_bordered YpcGooglePay-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Google Pay
    </h4>
  </div>
</article>
`;
